[tool.poetry]
version = "3.0.1"
name = "geodefi"
description = "Python SDK for Geodefi Ecosystem"
authors = ["0xIceBear"]
readme = "README.md"
include=['src']

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pylint = "^3.2.5"
black = "^24.4.2"
pytest = "^8.2.2"
ipykernel = "^6.29.5"
web3 = "^6.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["*/tests/*", "conftest.py"]
skips = ["B608"]

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
