[metadata]
name = geode-finance
version = 1.0.0
description = Python SDK for contributing to Geode Finance Ecosystem
author = Ice Bear
author_email = icebear@geode.fi
url = https://www.geode.fi/
license = MIT
license_file = LICENSE
keywords = ethereum, geode, web3
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    
[options]
zip_safe = False
python_requires = >=3.6
packages = find:
install_requires =
    web3
    py_ecc
    ssz

[options.package_data]
* = *.json

#package_data={"geode.eth.contracts": ["abi/goerli/*.json"]},

[options.packages.find]
exclude = tests*, venv*, docs*

#[options.entry_points]
#console_scripts =
#    telescope-eth = geode.eth.telescope:main

