[metadata]
name = geodefi
description = Python SDK for Geodefi Ecosystem
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = IceBear
author_email = admin@geode.fi
url = https://www.geode.fi/
license = MIT
license_file = LICENSE
keywords = ethereum, geode, web3
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    
[options]
zip_safe = False
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires =
    web3==6.10.0
    py_ecc==6.0.0
    ssz==0.3.1

[options.packages.find]
exclude = tests*, venv*, docs*